<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_sensor_cpp</name>
  <version>1.0.0</version>
  <description>High-performance MPU6050 Driver with EKF Fusion</description>
  <maintainer email="panzereryk03@gmail.com">eryk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>eigen3_cmake_module</depend>
  <depend>eigen3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
